--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
+.App{
+  width: 100%;
+  margin: 0 auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.dark-mode{
+  background: rgb(14, 4, 34);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.light-mode{
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 2.5rem;
+}
+.Header{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Buttonlight{
+  width: 6rem;
+  height: 3rem;
+  background: rgb(255, 255, 255);
+  border: 1px solid black;
+  border-radius: .8rem;
+}
+.buttonDark{
+  width: 6rem;
+  height: 3rem;
+  background: rgb(0, 0, 0);
+  color: white;
+  border: 1px solid rgb(255, 255, 255);
+  border-radius: .8rem;
+}
+.characters-container{
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  gap: 1.5rem;
+  justify-items: center;
+}
+.Rick-Card-Container{
+  display: flex;
+  flex-direction: column;
+  max-width: 12rem;
+}
+.Rick-Card-Container h2{
+  width: 100%;
+  text-align: center;
 }
